# Yel_PD

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  xmake.lua
cmake/: Findboost.cmake  Findlibigl.cmake  Findnlohmann_json.cmake  Findspdlog.cmake
json/: config_armadillo_14K_HRPD.json  config_armadillo_14K_QNPD.json  config_bear_fiber_117K.json  config_longbar_QNPD.json  config_shoe_fiber_143K.json  config_shoe_fiber_177K.json  config_turtle.json  config_turtle_HRPD.json  config_turtle_Newton.json  config_turtle_QNPD.json  scene_twist_bar.json
json/cad/: config_blade_QNPD.json  config_guide_QNPD.json  config_p360gm_HRPD.json  config_p360gm_QNPD.json  config_wheel_QNPD.json
json/msh/: config_bar_14114_QNPD.json  config_bar_186_QNPD.json  config_bar_2523_QNPD.json  config_bar_651_QNPD.json  config_bar_6_Newton.json  config_bar_6_QNPD.json
models/cad/: blade.stl
src/: main.cpp
src/CUDA/: CUDAMatrixVectorMult.cu  CUDAMatrixVectorMult.hpp
src/ImGuiContext/: ImGuiContext.cpp  ImGuiContext.hpp  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.hpp
src/Simulator/: PDSimulator.hpp  PDTypeDef.hpp
src/Simulator/HRPD/: HRPDOperationManager.cpp  HRPDOperationManager.hpp  HRPDOperationObject.cpp  HRPDOperationObject.hpp  HRPDSimulator.cpp  HRPDSimulator.hpp  HRPDSubspaceBuilder.cpp  HRPDSubspaceBuilder.hpp  HRPDTetMesh.cpp  HRPDTetMesh.hpp  STVDSampler.hpp
src/Simulator/HRPD/CUDA/: CUDAMatrixOP.cu  CUDAMatrixOP.hpp  CUDAMatrixVectorMult.cu  CUDAMatrixVectorMult.hpp
src/Simulator/Newton/: NewtonSimulator.cpp  NewtonSimulator.hpp  TetMesh.cpp  TetMesh.hpp
src/Simulator/QNPD/: QNPDConstraint.hpp  QNPDPenaltyConstraint.cpp  QNPDSimulator.cpp  QNPDSimulator.hpp  QNPDTetConstraint.cpp  QNPDTetMesh.cpp  QNPDTetMesh.hpp
src/UI/: InteractState.hpp
src/Util/: MathHelper.hpp  MeshIO.cpp  MeshIO.hpp  Profiler.hpp  StoreData.hpp  Timer.hpp
src/Viewer/: PDViewer.cpp  PDViewer.hpp
src/polyfem/solver/: DenseNewtonDescentSolver.hpp  LBFGSSolver.hpp  NonlinearSolver.hpp  SparseNewtonDescentSolver.hpp
src/polyfem/solver/line_search/: LineSearch.hpp
src/polysolve/: LinearSolverEigen.hpp
